<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.OfficialStoreFragment"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            app:startIconDrawable="@drawable/ic_search"
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cari_di_official_store"
            android:minHeight="48dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp"
            android:gravity="end">
            <ImageView
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"/>
            <ImageView
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications"/>
            <ImageView
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cart"/>
            <ImageView
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_official_store"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/purple_500"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_fashion"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_electronic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electronic" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_hp_tablet_nocolor"
                />
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_gadget" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_auto_hoby"
                />
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_hobbies"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_banner_dua" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_weight="1"
            app:contentPadding="12dp"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pasti_ready_color"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:text="@string/pasti_ready"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:contentPadding="12dp"
            android:layout_margin="6dp"
            android:layout_weight="1">
            <TextView
                android:drawableStart="@drawable/ic_pasti_ori_color"
                android:drawablePadding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pasti_original"
                android:gravity="center"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="12dp"
            >
            <TextView
                android:drawableStart="@drawable/ic_garansi_tujuh_hari_color"
                android:drawablePadding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garansi_7_hari"
                android:gravity="center"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>