<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TransaksiFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_transaksi"
        android:textStyle="bold"
        android:textColor="#3A3A3A"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"/>
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_search"
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cari_transaksi"
        android:minHeight="48dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="8dp"
        app:cardCornerRadius="12dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/img_waiting"
                android:text="@string/menunggu_pembayaran"
                android:drawablePadding="4dp"/>
            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
<!--produk 1-->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="12dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_shopping_bag_dua"/>
                    <LinearLayout
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/belanja"
                            android:textColor="#3A3A3A"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_26_februari_2023"
                            android:textColor="#3A3A3A"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#99B0DFBE"
                        android:text="@string/selesai"
                        android:textColor="#07BB3B"
                        android:textStyle="bold" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_dot"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/img_earphone_robot"/>
                <LinearLayout
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_robot_earphone"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#3A3A3A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/barang_terjual"/>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_belanja"
                        android:textColor="#3A3A3A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_satu"
                        android:textStyle="bold"
                        android:textColor="#3A3A3A"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/elevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ulas"
                        android:textColor="@color/white"
                        android:backgroundTint="#07BB3B"
                        android:textSize="14sp"
                        />
                    <Button
                        android:layout_marginStart="4dp"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beli_lagi"
                        android:textSize="12sp"
                        android:textColor="#07BB3B"
                        app:strokeColor = "#07BB3B"
                        app:strokeWidth = "2dp"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
<!--    produk2-->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="12dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_shopping_bag_dua"/>
                    <LinearLayout
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/belanja"
                            android:textColor="#3A3A3A"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal_feb"
                            android:textColor="#3A3A3A"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selesai"
                        android:textStyle="bold"
                        android:textColor="#07BB3B"
                        android:background="#99B0DFBE"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_dot"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/img_ssd_crucial"/>
                <LinearLayout
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/barang_crucial_ssd"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#3A3A3A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/barang_terjual"/>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_belanja"
                        android:textColor="#3A3A3A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_dua"
                        android:textStyle="bold"
                        android:textColor="#3A3A3A"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ulas"
                        android:textColor="@color/white"
                        android:backgroundTint="#07BB3B"
                        android:textSize="14sp"
                        />
                    <Button
                        android:layout_marginStart="4dp"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beli_lagi"
                        android:textSize="12sp"
                        android:textColor="#07BB3B"
                        app:strokeColor = "#07BB3B"
                        app:strokeWidth = "2dp"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>